Poetry and Jenkins Configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,26 @@
+[tool.poetry]
+name = "dill-do-bot"
+version = "0.1.0"
+description = "Discord bot for Dill Do server"
+authors = ["ayricky <marianoricardo97@gmail.com>"]
+readme = "README.md"
+packages = [{include = "src"}]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+discord-py = {extras = ["voice"], version = "^2.2.2"}
+elevenlabslib = "^0.4.2"
+python-dotenv = "^1.0.0"
+youtube-dl = "^2021.12.17"
+requests = "^2.28.2"
+ruff = "^0.0.261"
+soundfile = "^0.12.1"
+sounddevice = "^0.4.6"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 select = ["E", "F", "I"]
