--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dill-do-bot"
+name = "dill-bot"
 version = "0.1.0"
 description = "Discord bot for Dill Do server"
 authors = ["ayricky <marianoricardo97@gmail.com>"]
@@ -12,7 +12,6 @@ elevenlabslib = "^0.4.2"
 python-dotenv = "^1.0.0"
 youtube-dl = "^2021.12.17"
 requests = "^2.28.2"
-ruff = "^0.0.261"
 soundfile = "^0.12.1"
 sounddevice = "^0.4.6"
 
@@ -20,47 +19,14 @@ sounddevice = "^0.4.6"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.ruff]
-# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
-select = ["E", "F", "I"]
-ignore = []
-
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["A", "B", "C", "D", "E", "F", "I"]
-unfixable = []
-
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-]
-
+[tool.black]
 line-length = 120
 
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-
-# Assume Python 3.11.
-target-version = "py311"
-
-[tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
-max-complexity = 10
+[flake8]
+ignore = ['E501']
+max-line-length = 120
+exclude =
+    .git,
+    __pycache__,
+    build,
+    dist
