--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,9 @@ line-length = 120
 [flake8]
 ignore = ['E501']
 max-line-length = 120
-exclude =
-    .git,
-    __pycache__,
-    build,
-    dist
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist"
+]
