--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,26 +20,18 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LINTER_RULES_PATH: .github/linters/
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
-          load: true
-          tags: dill_bot:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          push: true
+          tags: ayricky/dill_bot:latest
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.5.4
@@ -50,12 +42,13 @@ jobs:
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           ELEVENLABS_TOKEN: ${{ secrets.ELEVENLABS_TOKEN }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} <<EOF
-          docker build -t dill_bot:latest .
-          docker stop dill_bot || true
-          docker rm dill_bot || true
-          docker run -d --name dill_bot -e DISCORD_TOKEN=$DISCORD_TOKEN -e ELEVENLABS_TOKEN=$ELEVENLABS_TOKEN dill_bot:latest
+          cd dill_bot
+          docker pull ayricky/dill_bot:latest
+          docker-compose down || true
+          docker-compose up --build -d
           EOF
 
       - name: Release Please
