--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+aiofiles = "^23.1.0"
 discord-py = {extras = ["voice"], version = "^2.2.2"}
 elevenlabslib = "^0.4.2"
-python-dotenv = "^1.0.0"
+psycopg2-binary = "^2.9.6"
 youtube-dl = "^2021.12.17"
 requests = "^2.28.2"
 soundfile = "^0.12.1"
