--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ aiofiles = "^23.1.0"
 discord-py = {extras = ["voice"], version = "^2.2.2"}
 elevenlabslib = "^0.4.2"
 psycopg2-binary = "^2.9.6"
-youtube-dl = "^2021.12.17"
+youtube-dl = "*"
 requests = "^2.28.2"
 soundfile = "^0.12.1"
 sounddevice = "^0.4.6"
